--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(colors)
 export(config)
 export(display_all_palettes)
 export(every_nth)
+export(example_data_fn_nor_covid19_cases_by_time_location)
 export(excel_style_background_red)
 export(excel_style_background_yellow)
 export(excel_style_num_0)
