--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(print,github_code)
 export(as_github_code)
 export(base_color)
 export(colors)
-export(config)
+export(global)
 export(display_all_palettes)
 export(every_nth)
 export(example_data_fn_nor_covid19_cases_by_time_location)
@@ -35,7 +35,7 @@ export(pretty_breaks)
 export(save_a4)
 export(scale_color_fhi)
 export(scale_fill_fhi)
-export(set_config)
+export(set_global)
 export(set_x_axis_vertical)
 export(theme_csstyle)
 export(view_html)
