--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,17 +3,35 @@ url: https://www.csids.no/csstyle/
 template:
   package: csidstemplatepkgdown
 
-# reference:
-# - title: ggplot2
-# - subtitle: Themes
-#   contents: starts_with("theme")
-# - title: Styles/Formatting
-# - subtitle: Format
-#   contents:
-#   - starts_with("format")
-# - subtitle: Excel
-#   contents:
-#   - starts_with("excel")
-# - subtitle: htmltable
-#   contents:
-#   - starts_with("htmltable")
+reference:
+- title: ggplot2
+- subtitle: Themes
+  contents:
+  - starts_with("theme")
+  - set_x_axis_vertical
+  - pretty_breaks
+  - every_nth
+- subtitle: Colors
+  contents:
+  - starts_with("scale_color")
+  - starts_with("scale_fill")
+  - colors
+  - display_all_palettes
+- subtitle: Plots
+  contents:
+  - starts_with("plot_")
+- subtitle: Utils
+  contents:
+  - save_a4
+- title: Styles/Formatting
+- subtitle: Format
+  contents:
+  - starts_with("format")
+- subtitle: Github
+  contents:
+  - as_github_code
+  - print.github_code
+- title: Other
+  contents:
+  - view_html
+  - set_global
