plot_seasonal_timeseries

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,18 +19,14 @@ LazyData: true
 Imports: data.table,
     ggplot2, 
     glue, 
-    huxtable,
-    htmlTable,
     magrittr,
-    openxlsx,
     rstudioapi,
-    stringi,
-    stringr, 
-    scales
+    stringr,
 Suggests: testthat,
     knitr,
     rmarkdown,
     lemon,
+    covidnor,
     csdata,
     csmaps,
     cstime,
