--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: csstyle
-Title: Standardizing Outputs
-Version: 2022.11.24
+Title: Standardizing Outputs in the CSIDS Style
+Version: 2023.12.22
 Authors@R: c(
   person(c("Richard","Aubrey"), "White", email = "hello@rwhite.no", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6747-1726")), 
-  person(c("Celine","Victoria"), "Berg-Hansen", email = "celinevictoria.berg-hansen@fhi.no", role = c("aut"), comment = c(ORCID = "0000-0002-0033-2019")),
+  person(c("Celine","Victoria"), "Berg-Hansen", role = c("aut"), comment = c(ORCID = "0000-0002-0033-2019")),
   person(c("Chi"), "Zhang", email = "andreachizhang@yahoo.com", role = c("aut")),
   person("CSIDS", email = "hello@csids.no", role = c("cph"))
   )
@@ -23,14 +23,10 @@ Imports: data.table,
     magrittr,
     rstudioapi,
     stringr,
+    csdata
 Suggests: testthat,
     knitr,
     rmarkdown,
-    lemon,
-    covidnor,
-    csdata,
-    csmaps,
-    cstime,
-    plnr
+    lubridate
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
